Add: Models, Cotrolers and Views
Added Models, Cotrolers and Views

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyAppDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "CourseProjectContext": "Server=(localdb)\\mssqllocaldb;Database=CourseProjectContext-038363e1-a218-4424-a164-6b3288588f22;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning"
     }
   },
   "AllowedHosts": "*"
